# cjdev

./: .env.dist  .git-mm  .gitignore  .gitmodules  AGENTS.md  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  cjdev.sh  cjdev.toml  cjpm.toml  envsetup.sh  package-lock.json  package.json  pyproject.toml  set-env.sh  unset-env.sh
.github/ISSUE_TEMPLATE/: 00-feature-request.yml  01-bug-report.yml
assets/: Dockerfile
cjdev/: cjpm.toml
cjdev/src/assets/: dockerfile.cj
docs/: concept.md  spec.md
libs/yadi/: cjpm.toml
modules/cjdev/: cjpm.toml
modules/cli_cj/: cjpm.toml
modules/custom_derive/: cjpm.toml
modules/ddd_cj/: cjpm.toml
modules/my_derive/: cjpm.toml
modules/pp/: cjpm.toml
modules/result_cj/: cjpm.toml
modules/survey/: cjpm.toml
modules/toml_cj/: cjpm.toml
src/: aliases.sh  cjdev.cj  dc_exports.sh  envs.cj  main.cj
src/app/: cjdev.cj  cli.cj
src/assets/: dockerfile.cj
src/cjdev/: __init__.py  app.py  cli.py  config.py
src/command/: build.sh  dc.sh  git-mm.sh  init.sh  test.sh
src/commands/: cjdev_command.cj  dc_command.cj
src/config/: cjdev_config.cj  container_config.cj  general_config.cj  project_config.cj  projects_config.cj
src/domain/: domain.cj
src/env/: vars.cj
src/features/: build.cj  dc.cj  init.cj
src/infra/: infra.cj
src/lib/: dc.sh  git-mm.sh
src/logging/: chained_logger.cj  create_global_logger.cj  pretty_logger.cj  seq_logger.cj
src/util/: ansi.sh  general.sh  git-mm.sh  gitcode.sh  log.sh  result.cj  util.cj
src/utils/: command_launcher.cj  conditional.cj  default.cj  utils.cj
(+145 files in other folders)
