[project]
name = "cjdev"
version = "0.1.0"
description = "Cangjie's developer utilities"
readme = "README.md"
authors = [
    { name = "Dmitrii Chizha", email = "me@filaco.dev" }
]
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.46",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "questionary>=2.1.1",
    "rich>=14.2.0",
    "tomlkit>=0.14.0",
    "typer>=0.21.1",
]

[project.scripts]
cjdev = "cjdev:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.ty]
venvPath = "."

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
